feat: Allow configuring custom metrics on updater
* Custom metrics for variants total, avg, min and max can be configured by the sysadmins on the updater so that CEEMS DB will keep these metrics for easy retrieval later. The limitation is that these metrics must be scalar values and there is no possibility to save vectors for the instant

* For the moment they are not really documented as they are very advanced level and only included in example config file

* Added unit and e2e tests
