# pkg/api/docs/swagger.json
@@ -385,6 +385,16 @@
                         },
                         "type": "object"
                     },
+                    "avg_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Average statistics of misc custom metrics of unit. These metrics can be anything where average value is relevant",
+                        "example": {
+                            "mem_bw_avg": 2545
+                        },
+                        "type": "object"
+                    },
                     "avg_gpu_mem_usage": {
                         "additionalProperties": {
                             "type": "number"
@@ -439,6 +449,26 @@
                         "description": "User group",
                         "example": "grp1",
                         "type": "string"
+                    },
+                    "max_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Maximum statistics of misc custom metrics of unit. These metrics can be anything where maxoimum value is relevant",
+                        "example": {
+                            "gpu_power_max": 454
+                        },
+                        "type": "object"
+                    },
+                    "min_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Minimum statistics of misc custom metrics of unit. These metrics can be anything where minimum value is relevant",
+                        "example": {
+                            "host_pwr_min": 36
+                        },
+                        "type": "object"
                     },
                     "name": {
                         "description": "Name of compute unit",
@@ -500,6 +530,17 @@
                         "description": "Total CPU energy usage(s) in kWh during lifetime of unit",
                         "example": {
                             "total": 0.73
+                        },
+                        "type": "object"
+                    },
+                    "total_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Total statistics of misc custom metrics of unit. These metrics can be anything where total value is relevant",
+                        "example": {
+                            "cycles_total": 23232323,
+                            "instr_total": 454342323
                         },
                         "type": "object"
                     },
@@ -617,6 +658,16 @@
                         },
                         "type": "object"
                     },
+                    "avg_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Average statistics of misc custom metrics during lifetime of project. These metrics can be anything where average value is relevant",
+                        "example": {
+                            "mem_bw_avg": 2545
+                        },
+                        "type": "object"
+                    },
                     "avg_gpu_mem_usage": {
                         "additionalProperties": {
                             "type": "number"
@@ -646,6 +697,26 @@
                         "description": "User group",
                         "example": "grp1",
                         "type": "string"
+                    },
+                    "max_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Maximum statistics of misc custom metrics during lifetime of project. These metrics can be anything where maxoimum value is relevant",
+                        "example": {
+                            "gpu_power_max": 454
+                        },
+                        "type": "object"
+                    },
+                    "min_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Minimum statistics of misc custom metrics during lifetime of project. These metrics can be anything where minimum value is relevant",
+                        "example": {
+                            "host_pwr_min": 36
+                        },
+                        "type": "object"
                     },
                     "num_units": {
                         "description": "Number of consumed units",
@@ -683,11 +754,22 @@
                         },
                         "type": "object"
                     },
+                    "total_custom_stats": {
+                        "additionalProperties": {
+                            "type": "number"
+                        },
+                        "description": "Total statistics of misc custom metrics during lifetime of project. These metrics can be anything where total value is relevant",
+                        "example": {
+                            "cycles_total": 23232323,
+                            "instr_total": 454342323
+                        },
+                        "type": "object"
+                    },
                     "total_egress_stats": {
                         "additionalProperties": {
                             "type": "number"
                         },
-                        "description": "Total Egress statistics of unit",
+                        "description": "Total Egress statistics of project",
                         "example": {
                             "bytes_total": 454342323,
                             "packets_total": 23232323
@@ -719,7 +801,7 @@
                         "additionalProperties": {
                             "type": "number"
                         },
-                        "description": "Total Ingress statistics of unit",
+                        "description": "Total Ingress statistics of project",
                         "example": {
                             "bytes_total": 8503405,
                             "packets_total": 43423
@@ -730,7 +812,7 @@
                         "additionalProperties": {
                             "type": "number"
                         },
-                        "description": "Total IO read statistics during lifetime of unit",
+                        "description": "Total IO read statistics during lifetime of project",
                         "example": {
                             "bytes_total": 245000000,
                             "requests_total": 49423
@@ -741,7 +823,7 @@
                         "additionalProperties": {
                             "type": "number"
                         },
-                        "description": "Total IO write statistics during lifetime of unit",
+                        "description": "Total IO write statistics during lifetime of project",
                         "example": {
                             "bytes_total": 12000000,
                             "requests_total": 13923
