# pkg/api/models/models.go
@@ -46,6 +46,10 @@ type Unit struct {
 	TotalIOReadStats    MetricMap  `example:"bytes_total:245000000,requests_total:49423"                                                  json:"total_io_read_stats,omitempty"        sql:"total_io_read_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total IO read statistics during lifetime of unit
 	TotalIngressStats   MetricMap  `example:"bytes_total:8503405,packets_total:43423"                                                     json:"total_ingress_stats,omitempty"        sql:"total_ingress_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total Ingress statistics of unit
 	TotalEgressStats    MetricMap  `example:"bytes_total:454342323,packets_total:23232323"                                                json:"total_egress_stats,omitempty"         sql:"total_egress_stats"                  sqlitetype:"text"    swaggertype:"object,number"` // Total Outgress statistics of unit
+	TotalCustomStats    MetricMap  `example:"instr_total:454342323,cycles_total:23232323"                                                json:"total_custom_stats,omitempty"         sql:"total_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`  // Total statistics of misc custom metrics of unit. These metrics can be anything where total value is relevant
+	AveCustomStats      MetricMap  `example:"mem_bw_avg:2545"                                                json:"avg_custom_stats,omitempty"         sql:"avg_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                  // Average statistics of misc custom metrics of unit. These metrics can be anything where average value is relevant
+	MinCustomStats      MetricMap  `example:"host_pwr_min:36"                                                json:"min_custom_stats,omitempty"         sql:"min_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                  // Minimum statistics of misc custom metrics of unit. These metrics can be anything where minimum value is relevant
+	MaxCustomStats      MetricMap  `example:"gpu_power_max:454"                                                json:"max_custom_stats,omitempty"         sql:"max_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                // Maximum statistics of misc custom metrics of unit. These metrics can be anything where maxoimum value is relevant
 	Tags                Tag        `example:"uid:1000,gid:1000,workdir:/home/user"                                                        json:"tags,omitempty"                       sql:"tags"                                sqlitetype:"text"    swaggertype:"object,string"` // A map to store generic info. String and int64 are valid value types of map
 	Ignore              int        `json:"-"                                                                                              sql:"ignore"                                sqlitetype:"integer"`                                                                       // Whether to ignore unit
 	NumUpdates          int64      `json:"-"                                                                                              sql:"num_updates"                           sqlitetype:"integer"`                                                                       // Number of updates. This is used internally to update aggregate metrics
@@ -87,10 +91,14 @@ type Usage struct {
 	AveGPUMemUsage      MetricMap `example:"global:45.26"                                                                                json:"avg_gpu_mem_usage,omitempty"          sql:"avg_gpu_mem_usage"                   sqlitetype:"text"    swaggertype:"object,number"` // Average GPU memory usage(s) during lifetime of project
 	TotalGPUEnergyUsage MetricMap `example:"total:5.39"                                                                                  json:"total_gpu_energy_usage_kwh,omitempty" sql:"total_gpu_energy_usage_kwh"          sqlitetype:"text"    swaggertype:"object,number"` // Total GPU energy usage(s) in kWh during lifetime of project
 	TotalGPUEmissions   MetricMap `example:"owid_total:15.22,emaps_total:12.09"                                                          json:"total_gpu_emissions_gms,omitempty"    sql:"total_gpu_emissions_gms"             sqlitetype:"text"    swaggertype:"object,number"` // Total GPU emissions from source(s) in grams during lifetime of project
-	TotalIOWriteStats   MetricMap `example:"bytes_total:12000000,requests_total:13923"                                                   json:"total_io_write_stats,omitempty"       sql:"total_io_write_stats"                sqlitetype:"text"    swaggertype:"object,number"` // Total IO write statistics during lifetime of unit
-	TotalIOReadStats    MetricMap `example:"bytes_total:245000000,requests_total:49423"                                                  json:"total_io_read_stats,omitempty"        sql:"total_io_read_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total IO read statistics during lifetime of unit
-	TotalIngressStats   MetricMap `example:"bytes_total:8503405,packets_total:43423"                                                     json:"total_ingress_stats,omitempty"        sql:"total_ingress_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total Ingress statistics of unit
-	TotalEgressStats    MetricMap `example:"bytes_total:454342323,packets_total:23232323"                                                json:"total_egress_stats,omitempty"         sql:"total_egress_stats"                  sqlitetype:"text"    swaggertype:"object,number"` // Total Egress statistics of unit
+	TotalIOWriteStats   MetricMap `example:"bytes_total:12000000,requests_total:13923"                                                   json:"total_io_write_stats,omitempty"       sql:"total_io_write_stats"                sqlitetype:"text"    swaggertype:"object,number"` // Total IO write statistics during lifetime of project
+	TotalIOReadStats    MetricMap `example:"bytes_total:245000000,requests_total:49423"                                                  json:"total_io_read_stats,omitempty"        sql:"total_io_read_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total IO read statistics during lifetime of project
+	TotalIngressStats   MetricMap `example:"bytes_total:8503405,packets_total:43423"                                                     json:"total_ingress_stats,omitempty"        sql:"total_ingress_stats"                 sqlitetype:"text"    swaggertype:"object,number"` // Total Ingress statistics of project
+	TotalEgressStats    MetricMap `example:"bytes_total:454342323,packets_total:23232323"                                                json:"total_egress_stats,omitempty"         sql:"total_egress_stats"                  sqlitetype:"text"    swaggertype:"object,number"` // Total Egress statistics of project
+	TotalCustomStats    MetricMap  `example:"instr_total:454342323,cycles_total:23232323"                                                json:"total_custom_stats,omitempty"         sql:"total_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`  // Total statistics of misc custom metrics during lifetime of project. These metrics can be anything where total value is relevant
+	AveCustomStats      MetricMap  `example:"mem_bw_avg:2545"                                                json:"avg_custom_stats,omitempty"         sql:"avg_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                  // Average statistics of misc custom metrics during lifetime of project. These metrics can be anything where average value is relevant
+	MinCustomStats      MetricMap  `example:"host_pwr_min:36"                                                json:"min_custom_stats,omitempty"         sql:"min_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                  // Minimum statistics of misc custom metrics during lifetime of project. These metrics can be anything where minimum value is relevant
+	MaxCustomStats      MetricMap  `example:"gpu_power_max:454"                                                json:"max_custom_stats,omitempty"         sql:"max_custom_stats"                  sqlitetype:"text"    swaggertype:"object,number"`                                // Maximum statistics of misc custom metrics during lifetime of project. These metrics can be anything where maxoimum value is relevant
 	NumUpdates          int64     `json:"-"                                                                                              sql:"num_updates"                           sqlitetype:"text"`                                                                          // Number of updates. This is used internally to update aggregate metrics
 }
 
